--- a/index.html
+++ b/index.html
@@ -1,3 +1,76 @@
-<h1>PSP Theme Archive</h1>
-  <meta http-equiv="refresh" content="5; url='https://pspmodx.github.io/psp-theme-archive/'" />
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>PSP Theme Archive</title>
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #111, #1a1a1a);
+  color: white;
+  text-align: center;
+}
+
+header {
+  padding: 60px 20px;
+}
+
+h1 {
+  font-size: 48px;
+  margin-bottom: 10px;
+}
+
+p {
+  color: #aaa;
+  font-size: 18px;
+}
+
+.buttons {
+  margin-top: 40px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 15px 30px;
+  margin: 10px;
+  text-decoration: none;
+  color: white;
+  background: #0070f3;
+  border-radius: 8px;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  background: #0055c3;
+}
+
+footer {
+  margin-top: 80px;
+  padding: 20px;
+  font-size: 14px;
+  color: #666;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+  <h1>🎮 PSP Theme Archive</h1>
+  <p>Preserving official and rare PSP themes.</p>
+
+  <div class="buttons">
+    <a class="btn" href="#">Browse Themes</a>
+    <a class="btn" href="#">GitHub Repository</a>
+  </div>
+</header>
+
+<footer>
+  © 2026 PSP Theme Archive
+</footer>
+
+</body>
+</html>
+
      
