--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>PSP Theme Archive</title>
+<title>PSPmod Theme Archive</title>
 <style>
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: basiic;
   background: linear-gradient(135deg, #111, #1a1a1a);
   color: white;
   text-align: center;
@@ -57,14 +57,10 @@ footer {
 <body>
 
 <header>
-  <h1>🎮 PSP Theme Archive</h1>
+  <h1>PSPmod Theme Archive</h1>
   <p>Preserving official and rare PSP themes.</p>
 
-  <div class="buttons">
-    <a class="btn" href="#">Browse Themes</a>
-    <a class="btn" href="#">GitHub Repository</a>
-  </div>
-</header>
+ <meta http-equiv="refresh" content="5; url='https://pspmod.gitbook.io/archive'" />
 
 <footer>
   © 2026 PSP Theme Archive
