--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>PSPmod Theme Archive</title>
+<title>👾PSPmod Theme Archive</title>
 <style>
 body {
   margin: 0;
@@ -42,7 +42,7 @@ p {
 }
 
 .btn:hover {
-  background: #0055c3;
+  background: #b2b5b3;
 }
 
 footer {
@@ -57,8 +57,9 @@ footer {
 <body>
 
 <header>
-  <h1>PSPmod Theme Archive</h1>
+  <h1>👾PSPmod Theme Archive</h1>
   <p>Preserving official and rare PSP themes.</p>
+   <h2>You will be redirected to the website, please wait.</h2>
 
  <meta http-equiv="refresh" content="5; url='https://pspmod.gitbook.io/archive'" />
 
