--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>👾PSPmod Theme Archive</title>
+<title>PSPmod Theme Archive</title>
 <style>
 body {
   margin: 0;
@@ -23,7 +23,7 @@ h1 {
 
 p {
   color: #aaa;
-  font-size: 18px;
+  font-size: 10px;
 }
 
 .buttons {
@@ -48,7 +48,7 @@ p {
 footer {
   margin-top: 80px;
   padding: 20px;
-  font-size: 14px;
+  font-size: 10px;
   color: #666;
 }
 </style>
@@ -57,8 +57,10 @@ footer {
 <body>
 
 <header>
-  <h1>👾PSPmod Theme Archive</h1>
-   <h2>You will be redirected to the website, please wait.</h2>
+  <h1>PSPmod Theme Archive</h1>
+   
+  
+  <h2>You will be redirected to the website, please wait.</h2>
 
  <meta http-equiv="refresh" content="5; url='https://pspmod.gitbook.io/archive'" />
 
