--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ h1 {
   margin-bottom: 10px;
 }
 
+h2 {
+  font-size: 30px;
+  margin-bottom: 10px;
+
 p {
   color: #aaa;
   font-size: 10px;
@@ -48,8 +52,8 @@ p {
 footer {
   margin-top: 80px;
   padding: 20px;
-  font-size: 10px;
-  color: #666;
+  font-size: 16px;
+  color: #bfb0b0;
 }
 </style>
 </head>
@@ -60,9 +64,12 @@ footer {
   <h1>PSPmod Theme Archive</h1>
    
   
+  
   <h2>You will be redirected to the website, please wait.</h2>
 
- <meta http-equiv="refresh" content="5; url='https://pspmod.gitbook.io/archive'" />
+ 
+  
+  <meta http-equiv="refresh" content="5; url='https://pspmod.gitbook.io/archive'" />
 
 <footer>
   © 2026 PSP Theme Archive
