--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ footer {
 
 <header>
   <h1>PSPmod Theme Archive</h1>
+ 
    
   
   
@@ -70,6 +71,8 @@ footer {
  
   
   <meta http-equiv="refresh" content="5; url='https://pspmod.gitbook.io/archive'" />
+<h2>Themes</h2>
+	  <p><a href="./official-theme/OFFİCİAL THEMES/OFFİCİAL THEMES">OFFİCİAL THEMES</a></p>
 
 <footer>
   © 2026 PSP Theme Archive
